tests/conformance/snapshots/runtime_scheduler_conformance_integration__conformance__macaroon_attenuation_vectors__basic_attenuation_time.snap
---
source: tests/conformance/macaroon_attenuation_vectors.rs
assertion_line: 70
expression: time_attenuated.to_binary()
---
[
    2,
    9,
    0,
    100,
    97,
    116,
    97,
    58,
    114,
    101,
    97,
    100,
    16,
    0,
    115,
    101,
    114,
    118,
    105,
    99,
    101,
    47,
    100,
    97,
    116,
    97,
    45,
    97,
    112,
    105,
    1,
    0,
    0,
    9,
    0,
    1,
    16,
    39,
    0,
    0,
    0,
    0,
    0,
    0,
    147,
    250,
    8,
    235,
    225,
    12,
    205,
    190,
    237,
    107,
    171,
    148,
    255,
    169,
    210,
    172,
    241,
    31,
    107,
    175,
    93,
    218,
    58,
    56,
    87,
    210,
    148,
    204,
    230,
    242,
    237,
    70,
]
