tests/conformance/snapshots/runtime_scheduler_conformance_integration__conformance__macaroon_attenuation_vectors__comprehensive_discharge.snap
---
source: tests/conformance/macaroon_attenuation_vectors.rs
assertion_line: 354
expression: service_discharge.to_binary()
---
[
    2,
    11,
    0,
    102,
    105,
    110,
    97,
    108,
    58,
    99,
    104,
    101,
    99,
    107,
    13,
    0,
    118,
    97,
    108,
    105,
    100,
    97,
    116,
    111,
    114,
    46,
    115,
    118,
    99,
    1,
    0,
    0,
    22,
    0,
    6,
    8,
    0,
    98,
    117,
    105,
    108,
    100,
    95,
    105,
    100,
    9,
    0,
    98,
    117,
    105,
    108,
    100,
    45,
    55,
    56,
    57,
    84,
    128,
    144,
    89,
    76,
    22,
    130,
    197,
    228,
    49,
    182,
    215,
    152,
    142,
    86,
    221,
    236,
    46,
    88,
    137,
    98,
    14,
    226,
    59,
    1,
    137,
    61,
    110,
    80,
    177,
    155,
    3,
]
