tests/conformance/snapshots/runtime_scheduler_conformance_integration__conformance__macaroon_attenuation_vectors__multi_third_party_audit_discharge.snap
---
source: tests/conformance/macaroon_attenuation_vectors.rs
assertion_line: 134
expression: audit_discharge.to_binary()
---
[
    2,
    15,
    0,
    100,
    101,
    112,
    108,
    111,
    121,
    58,
    97,
    112,
    112,
    114,
    111,
    118,
    97,
    108,
    14,
    0,
    97,
    117,
    100,
    105,
    116,
    46,
    99,
    111,
    114,
    112,
    46,
    99,
    111,
    109,
    1,
    0,
    0,
    31,
    0,
    6,
    11,
    0,
    97,
    112,
    112,
    114,
    111,
    118,
    97,
    108,
    95,
    105,
    100,
    15,
    0,
    68,
    69,
    80,
    76,
    79,
    89,
    45,
    50,
    48,
    50,
    52,
    45,
    48,
    48,
    49,
    218,
    91,
    118,
    213,
    253,
    69,
    173,
    218,
    152,
    78,
    255,
    107,
    227,
    205,
    80,
    247,
    188,
    80,
    172,
    110,
    32,
    47,
    174,
    193,
    178,
    183,
    124,
    28,
    177,
    176,
    83,
    130,
]
