tests/conformance/snapshots/runtime_scheduler_conformance_integration__conformance__macaroon_attenuation_vectors__multi_third_party_auth_discharge.snap
---
source: tests/conformance/macaroon_attenuation_vectors.rs
assertion_line: 130
expression: auth_discharge.to_binary()
---
[
    2,
    18,
    0,
    100,
    101,
    112,
    108,
    111,
    121,
    58,
    112,
    101,
    114,
    109,
    105,
    115,
    115,
    105,
    111,
    110,
    115,
    13,
    0,
    97,
    117,
    116,
    104,
    46,
    99,
    111,
    114,
    112,
    46,
    99,
    111,
    109,
    1,
    0,
    0,
    9,
    0,
    1,
    0,
    92,
    38,
    5,
    0,
    0,
    0,
    0,
    183,
    77,
    16,
    140,
    36,
    26,
    131,
    227,
    138,
    202,
    195,
    89,
    225,
    167,
    66,
    200,
    37,
    106,
    210,
    69,
    23,
    117,
    253,
    42,
    69,
    31,
    44,
    65,
    156,
    181,
    9,
    39,
]
