tests/conformance/snapshots/runtime_scheduler_conformance_integration__conformance__macaroon_attenuation_vectors__nested_gateway_discharge.snap
---
source: tests/conformance/macaroon_attenuation_vectors.rs
assertion_line: 187
expression: gateway_discharge.to_binary()
---
[
    2,
    13,
    0,
    114,
    111,
    117,
    116,
    101,
    58,
    98,
    97,
    99,
    107,
    101,
    110,
    100,
    11,
    0,
    103,
    97,
    116,
    101,
    119,
    97,
    121,
    46,
    115,
    118,
    99,
    2,
    0,
    0,
    9,
    0,
    8,
    100,
    0,
    0,
    0,
    60,
    0,
    0,
    0,
    1,
    11,
    0,
    98,
    97,
    99,
    107,
    101,
    110,
    100,
    46,
    115,
    118,
    99,
    12,
    0,
    101,
    120,
    101,
    99,
    58,
    99,
    111,
    109,
    112,
    117,
    116,
    101,
    32,
    0,
    83,
    105,
    164,
    127,
    1,
    50,
    242,
    73,
    8,
    165,
    24,
    31,
    227,
    45,
    12,
    249,
    230,
    190,
    253,
    178,
    82,
    203,
    181,
    44,
    91,
    49,
    46,
    105,
    77,
    77,
    31,
    177,
    158,
    196,
    235,
    230,
    246,
    223,
    171,
    192,
    113,
    93,
    179,
    42,
    192,
    173,
    138,
    52,
    200,
    131,
    146,
    56,
    253,
    215,
    101,
    118,
    220,
    227,
    121,
    63,
    11,
    155,
    170,
    16,
]
