tests/conformance/snapshots/runtime_scheduler_conformance_integration__conformance__macaroon_attenuation_vectors__nested_root_token.snap
---
source: tests/conformance/macaroon_attenuation_vectors.rs
assertion_line: 186
expression: root_token.to_binary()
---
[
    2,
    11,
    0,
    97,
    112,
    105,
    58,
    101,
    120,
    101,
    99,
    117,
    116,
    101,
    8,
    0,
    102,
    114,
    111,
    110,
    116,
    101,
    110,
    100,
    1,
    0,
    1,
    11,
    0,
    103,
    97,
    116,
    101,
    119,
    97,
    121,
    46,
    115,
    118,
    99,
    13,
    0,
    114,
    111,
    117,
    116,
    101,
    58,
    98,
    97,
    99,
    107,
    101,
    110,
    100,
    32,
    0,
    158,
    115,
    179,
    116,
    186,
    28,
    229,
    49,
    113,
    145,
    170,
    184,
    167,
    144,
    242,
    112,
    19,
    131,
    118,
    179,
    213,
    22,
    232,
    158,
    250,
    183,
    94,
    8,
    224,
    116,
    164,
    66,
    21,
    32,
    140,
    30,
    134,
    87,
    246,
    75,
    179,
    122,
    253,
    226,
    105,
    247,
    212,
    82,
    92,
    158,
    56,
    199,
    15,
    52,
    49,
    239,
    10,
    131,
    117,
    87,
    92,
    8,
    158,
    246,
]
